2019-01-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* richtext/richtext.C (richtextObj::redraw_whatsneeded): Fix
	multi-line input field display bug.

0.16

2019-01-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* Reimplemented and simplified API for creating Copy/Cut/Paste
	menu items.

2019-01-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* Default context popup menu in input fields, with Copy/Cut/Paste
	menu options.

2019-01-15  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/impl/focus/focusable_element.H (process_button_event):
	Right mouse button click moves keyboard focus just like the left
	mouse button click.

0.15

2019-01-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* Clean up the internal code that created scrollable peepholes
	(used by input fields, combo-boxes, the item layout manager, and
	the pane layout manager).

	Add a public API for the underlying peephole layout manager.

2018-12-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* ""_theme_font literals may now include font modifiers like
	""_font. Implement + and += operator overloads on x::w::font
	that modify an existing font.

0.14
	* Added search callback to the input field.

0.13

2018-12-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement the border layout manager.

2018-12-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* booklayoutmanager: clicking on left/right scroll buttons
	make sure the new page's tab is visible.

2018-12-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* Implement synchronization of window repainting.

	* Implement WM_HINTS. Specify that we handle input processing.
	Option to set urgent hint for dialog windows. Set alert and stop
	dialogs to urgent, by default.

0.12

2018-12-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* Create the toolbox layout manager.

	* Images: image filenames without a path component search the
	only theme directory.

2018-12-02  Sam Varshavchik  <mrsam@courier-mta.com>
